--- a/SmartTrip/src/app/tabs/tabs.page.html
+++ b/SmartTrip/src/app/tabs/tabs.page.html
@@ -8,9 +8,9 @@
     </div>
   </div>
   <div style="text-align: center;">
-    <ion-button class="second_button" size="large" shape="round" (click)="goToSignInPage()" style="margin-top: 690px;">login</ion-button>
+    <ion-button class="second_button small-text-button no-outline" size="large" shape="round" (click)="goToSignInPage()" style="margin-top: 630px;">login</ion-button>
   </div>
   <div style="text-align: center;">
-    <ion-button class="first_button" size="large" shape="round" (click)="goToSignUpPage()" style="margin-top: 25px;">sign up</ion-button>
+    <ion-button class="first_button small-text-button no-outline" size="large" shape="round" (click)="goToSignUpPage()" style="margin-top: 25px;">sign up</ion-button>
   </div>
 </ion-content>
