--- a/SmartTrip/src/app/write-review/write-review.page.html
+++ b/SmartTrip/src/app/write-review/write-review.page.html
@@ -7,7 +7,7 @@
     <div class="scrollable-container" style="position: relative; top: 23%; transform: translateY(-50%); overflow-y: scroll">
       <ion-list style="background-color: transparent; align-items: center">
         <ion-row>
-          <ion-col size="12" *ngFor="let item of items">
+          <ion-col size="10" *ngFor="let item of items">
             <ion-button class="commentButton" shape="round" (click)="setComment(item)">
               {{ item }}
             </ion-button>
@@ -33,16 +33,16 @@
         </div>
       </form>
     </div>
-    <div class="toilet" style="position: fixed; margin-top: 30px;">
-      <img src="{{toilet}}" (click)="selectToilet();" style="margin-left: 10%">
-      <img src="{{disabled}}" (click)="selectDisabled();" style="margin-left: 35%">
-      <img src="{{babycare}}" (click)="selectBabycare();" style="margin-left: 55%">
-      <img src="{{mosque}}" (click)="selectMosque();" style="margin-left: 75%">
+    <div class="toilet" style="position: fixed">
+      <img src="{{toilet}}" (click)="selectToilet();" style="margin-left: 10%; margin-top: -28px">
+      <img src="{{disabled}}" (click)="selectDisabled();" style="margin-left: 35% ; margin-top: -28px">
+      <img src="{{babycare}}" (click)="selectBabycare();" style="margin-left: 55% ;margin-top: -28px">
+      <img src="{{mosque}}" (click)="selectMosque();" style="margin-left: 75%;margin-top: -28px">
     </div>
   </div>
-
-  <div>
-    <ion-button class="first_button" style="filter: drop-shadow(0px 0px 8px rgba(0, 0, 0, 0.4)); margin-top: 640px; margin-left: 20px;" shape="round" (click)="cancel()">cancel</ion-button>
-    <ion-button class="second_button" style="filter: drop-shadow(0px 0px 8px rgba(0, 0, 0, 0.4)); margin-top: 640px; margin-left: 30px; " shape="round" (click)="onTriggerSheetClick()">rate</ion-button>
+  <div class="button-container" style="display: flex; margin-top: 580px; height: 40px ">
+    <ion-button class="first_button" style="filter: drop-shadow(0px 0px 8px rgba(0, 0, 0, 0.4)); margin-left: 20px; "shape="round" (click)="cancel()">cancel</ion-button>
+    <ion-button class="second_button" style="filter: drop-shadow(0px 0px 8px rgba(0, 0, 0, 0.4)); margin-left: 10px;" shape="round" (click)="onTriggerSheetClick()">rate</ion-button>
   </div>
+
 </ion-content>
