--- a/SmartTrip/src/app/write-review/write-review.page.scss
+++ b/SmartTrip/src/app/write-review/write-review.page.scss
@@ -1,8 +1,8 @@
 .commentButton{
   filter: drop-shadow(0px 0px 5px rgba(0, 0, 0, 0.3));
   width: fit-content !important;
-  height: 35px;
-  font-size: medium !important;
+  height: 27px;
+  font-size: small !important;
   --background: white;
   --color: #3a58cb;
   display: flex !important;
@@ -48,7 +48,7 @@
 }
 
 div.stars {
-  margin-top: -20px;
+  margin-top: -30px;
 }
 
 bar-rating ::ng-deep {
