--- a/SmartTrip/src/app/write-review/write-review.page.html
+++ b/SmartTrip/src/app/write-review/write-review.page.html
@@ -4,8 +4,8 @@
       <p style="font-size: 25px; margin-bottom: 0px; margin-top: 30px;">write a review</p>
     </div>
 
-    <div class="scrollable-container" style="position: relative; top: 23%; transform: translateY(-50%); overflow-y: scroll">
-      <ion-list style="background-color: transparent; align-items: center">
+    <div class="scrollable-container scrollable" style="position: relative; top: 23%; transform: translateY(-50%); overflow-y: scroll">
+      <ion-list class="list-scrollable" style="background-color: transparent; align-items: center">
         <ion-row>
           <ion-col size="10" *ngFor="let item of items">
             <ion-button class="commentButton" shape="round" (click)="setComment(item)">
@@ -15,11 +15,11 @@
         </ion-row>
       </ion-list>
     </div>
-
     <ion-card class="commentCard">
       <ion-item style="--border-style: none; display: flex; justify-content: center; align-items: center;">
         <ion-icon src="assets/icon/comment.svg" name="comment" slot="start" style=" font-size: 26px;"></ion-icon>
-        <ion-textarea [(ngModel)]="comment" class="commentArea" style="color: rgb(126, 126, 127);" readonly></ion-textarea>
+
+        <ion-textarea [(ngModel)]="comment" class="commentArea" style="color: rgb(126, 126, 127);max-height: 100px; overflow: auto; margin-top: 1px;" readonly></ion-textarea>
       </ion-item>
     </ion-card>
     <div>
@@ -34,15 +34,15 @@
       </form>
     </div>
     <div class="toilet" style="position: fixed">
-      <img src="{{toilet}}" (click)="selectToilet();" style="margin-left: 10%; margin-top: -28px">
-      <img src="{{disabled}}" (click)="selectDisabled();" style="margin-left: 35% ; margin-top: -28px">
-      <img src="{{babycare}}" (click)="selectBabycare();" style="margin-left: 55% ;margin-top: -28px">
-      <img src="{{mosque}}" (click)="selectMosque();" style="margin-left: 75%;margin-top: -28px">
+      <img src="{{toilet}}" (click)="selectToilet();" style="margin-left: 10%; margin-top: -20px">
+      <img src="{{disabled}}" (click)="selectDisabled();" style="margin-left: 35% ; margin-top: -20px">
+      <img src="{{babycare}}" (click)="selectBabycare();" style="margin-left: 55% ;margin-top: -20px">
+      <img src="{{mosque}}" (click)="selectMosque();" style="margin-left: 75%;margin-top: -20px">
     </div>
   </div>
   <div class="button-container" style="display: flex; margin-top: 580px; height: 40px ">
-    <ion-button class="first_button" style="filter: drop-shadow(0px 0px 8px rgba(0, 0, 0, 0.4)); margin-left: 20px; "shape="round" (click)="cancel()">cancel</ion-button>
-    <ion-button class="second_button" style="filter: drop-shadow(0px 0px 8px rgba(0, 0, 0, 0.4)); margin-left: 10px;" shape="round" (click)="onTriggerSheetClick()">rate</ion-button>
+    <ion-button class="first_button" style="filter: drop-shadow(0px 0px 8px rgba(0, 0, 0, 0.4)); margin-left: 20px;text-transform: none;font-weight: bold; "shape="round" (click)="cancel()">cancel</ion-button>
+    <ion-button class="second_button" style="filter: drop-shadow(0px 0px 8px rgba(0, 0, 0, 0.4)); margin-left: 10px;text-transform: none;font-weight: bold;" shape="round" (click)="onTriggerSheetClick()">rate</ion-button>
   </div>
 
 </ion-content>
