--- a/SmartTrip/src/app/write-review/write-review.page.scss
+++ b/SmartTrip/src/app/write-review/write-review.page.scss
@@ -28,7 +28,7 @@
   height: 55px;
   margin-left: 25px;
   border-radius: 20px;
-  margin-top: 50px;
+  margin-top: 22px;
 
 }
 
@@ -46,9 +46,13 @@
   filter: drop-shadow(0px 0px 8px rgba(0, 0, 0, 0.4));
 
 }
+.list-scrollable {
+  height: 100%;
+  overflow-y: scroll;
+}
 
 div.stars {
-  margin-top: -30px;
+  margin-top: -10px;
 }
 
 bar-rating ::ng-deep {
@@ -56,7 +60,9 @@ bar-rating ::ng-deep {
     justify-content: center;
 
     .br-unit {
-      font-size: 48px;
+      font-size: 45px;
+      margin-right: 5px; /* Yıldızlar arasındaki sağ boşluk */
+
     }
   }
 }
