--- a/SmartTrip/src/app/write-review/write-review.page.html
+++ b/SmartTrip/src/app/write-review/write-review.page.html
@@ -5,7 +5,7 @@
     </div>
 
     <div class="scrollable-container scrollable" style="position: relative; top: 23%; transform: translateY(-50%); overflow-y: scroll">
-      <ion-list class="list-scrollable" style="background-color: transparent; align-items: center">
+      <ion-list class="list-scrollable" style="background-color: transparent; align-items: center" (scroll)="preventModalScroll($event)">
         <ion-row>
           <ion-col size="10" *ngFor="let item of items">
             <ion-button class="commentButton" shape="round" (click)="setComment(item)">
@@ -17,9 +17,9 @@
     </div>
     <ion-card class="commentCard">
       <ion-item style="--border-style: none; display: flex; justify-content: center; align-items: center;">
-        <ion-icon src="assets/icon/comment.svg" name="comment" slot="start" style=" font-size: 26px;"></ion-icon>
-
-        <ion-textarea [(ngModel)]="comment" class="commentArea" style="color: rgb(126, 126, 127);max-height: 100px; overflow: auto; margin-top: 1px;" readonly></ion-textarea>
+        <ion-icon src="assets/icon/comment.svg" name="comment" slot="start" style="font-size: 26px;"></ion-icon>
+        <ion-textarea [(ngModel)]="comment" class="commentArea" style="color: rgb(126, 126, 127); margin-top: -1px;"readonly></ion-textarea>
+        <p *ngIf="commentError && !comment" style="margin-left: 0%" class="error-message">You have not commented yet.</p>
       </ion-item>
     </ion-card>
     <div>
@@ -41,7 +41,7 @@
     </div>
   </div>
   <div class="button-container" style="display: flex; margin-top: 580px; height: 40px ">
-    <ion-button class="first_button" style="filter: drop-shadow(0px 0px 8px rgba(0, 0, 0, 0.4)); margin-left: 20px;text-transform: none;font-weight: bold; "shape="round" (click)="cancel()">cancel</ion-button>
+    <ion-button class="first_button" style="filter: drop-shadow(0px 0px 8px rgba(0, 0, 0, 0.4)); margin-top: 4px; margin-left: 20px;" shape="round" (click)="cancel()" >cancel</ion-button>
     <ion-button class="second_button" style="filter: drop-shadow(0px 0px 8px rgba(0, 0, 0, 0.4)); margin-left: 10px;text-transform: none;font-weight: bold;" shape="round" (click)="onTriggerSheetClick()">rate</ion-button>
   </div>
 
